php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49757 long2ip can return wrong value in a multi-threaded application
Submitted: 2009-10-02 21:13 UTC Modified: 2009-10-05 14:46 UTC
From: sg at efficientip dot com Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 5.2.11 OS: FreeBSD 7.2
Private report: No CVE-ID: None
 [2009-10-02 21:13 UTC] sg at efficientip dot com
Description:
------------
long2ip use inet_ntoa which is not thread-safe (use inet_ntop instead).
inet_ntoa is also used in several other functions.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-10-05 14:45 UTC] svn@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=289216
Log: Fixed bug #49757 (long2ip() can return wrong value in a multi-threaded applications).
# original patch by Florian Anderiasch
 [2009-10-05 14:46 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC