Fixed bug #49757 (long2ip() can return wrong value in a multi-threaded applications). # original patch by Florian Anderiasch

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@289216 c90b9560-bf6c-de11-be94-00142212c4b1